--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -23,16 +23,11 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>-5</x>
-      <y>0</y>
-      <width>561</width>
-      <height>361</height>
-     </rect>
-    </property>
-   </widget>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QGraphicsView" name="graphicsView"/>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
